--- a/style.css
+++ b/style.css
@@ -76,3 +76,51 @@ html, body
  height: 100%;
  overflow: hidden
 }
+
+.barbieXformula{
+    width: 900px;
+}
+
+@media (max-width: 1000px) {
+    .barbieXformula{
+        width: 850px;
+    }
+}
+@media (max-width: 840px) {
+    .barbieXformula{
+        width: 750px;
+        height: 500px;
+    }
+}
+
+@media (max-width: 730px) {
+    .barbieXformula{
+        width: 650px;
+        height: 400px;
+        margin-top: 100px;
+    }
+}
+
+@media (max-width: 630px) {
+    .barbieXformula{
+        width: 550px;
+        height: 300px;
+        margin-top: 120px;
+    }
+}
+
+@media (max-width: 540px) {
+    .barbieXformula{
+        width: 450px;
+        height: 300px;
+        margin-top: 100px;
+    }
+}
+
+@media (max-width: 450px) {
+    .barbieXformula{
+        width: 400px;
+        height: 200px;
+        margin-top: 120px;
+    }
+}
