--- a/style.css
+++ b/style.css
@@ -32,10 +32,33 @@ h2{
 
 .container_rosa{
     width: 100%;
-    height: 100%;
     background: linear-gradient(to bottom, #E637A8 5%, #ee86d7);
     display: flex;
     justify-content: center;
+}
+
+.video_culero{
+    margin-bottom: 70px;
+    margin-right: 10px;
+}
+
+.botones_pedorros{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+}
+
+.amazon{
+    width: 100px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    margin-left: 10x;
+}
+.mattel{
+    width: 100px;
+    border-radius: 10px;
 }
 
 .fuder{
@@ -71,14 +94,9 @@ h2{
     border-radius: 5px;
 }
 
-html, body 
-{ 
- height: 100%;
- overflow: hidden
-}
 
 .barbieXformula{
-    width: 900px;
+    width: 100%;
 }
 
 @media (max-width: 1000px) {
